fix abi file, add spinner for loading svg, add portal count to front end

--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,9 @@
   text-shadow: 1px 1px pink;
   box-shadow: 0 0 16px pink;
 }
+
+/* .spinner {
+  height: 40%;
+  font-size: 2em;
+  border: 1px solid red;
+} */
