--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .mainContainer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
   margin-top: 64px;
   /* border: 1px solid red; */
@@ -11,9 +13,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 600px;
+  width: 600px;
   box-shadow: 0 0 16px pink;
   background-color: #333;
+  /* margin: 2em; */
+  margin: 1em;
   padding: 1em;
 }
 
@@ -36,11 +40,21 @@
   padding: 8px;
   border: 0;
   border-radius: 5px;
-  width: 100px;
+  /* width: 100px; */
   background-color: #333;
   color: #333;
   font-size: 1em;
   text-shadow: 1px 1px pink;
+  box-shadow: 0 0 16px pink;
+}
+
+.spellInput {
+  margin: 16px;
+  padding: 8px;
+  border: 0;
+  border-radius: 5px;
+  background-color: #333;
+  color: pink;
   box-shadow: 0 0 16px pink;
 }
 
@@ -49,3 +63,17 @@
   font-size: 2em;
   border: 1px solid red;
 } */
+
+.portalCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 600px;
+  color: lightslategray;
+  background-color: #333;
+  border: 0;
+  border-radius: 5px;
+  box-shadow: 0 0 16px pink;
+  padding: 16px;
+  margin: 1rem;
+}
